#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([RAOP-PLAY], [0.5.2], [nwinkler@users.sourceforge.net])
AC_CONFIG_SRCDIR([raop_play/raop_play.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_PATH_GLIB_2_0([2.0.0], [], [glib 2.0 or newer is required])

# Checks for libraries.
AC_CHECK_LIB([id3tag], [id3_file_open], [], [AC_MSG_ERROR([Library id3tag is required])])
AC_CHECK_LIB([fltk], [fl_yes], , AC_MSG_ERROR(Library fltk is required))
AC_CHECK_LIB([samplerate], [src_new], [], [AC_MSG_ERROR([Library samplerate is required])])
AC_CHECK_LIB([ssl], [RSA_new], [], [AC_MSG_ERROR([Library ssl is required])])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_HEADER_TIME
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([dup2 gethostbyname gethostname gettimeofday inet_ntoa memmove memset mkfifo select socket strcasecmp strchr strdup strerror strrchr strstr])

dnl BEGIN CUSTOM RULES

dnl =======Checks for FLTK==================================================

dnl Check for FLUID (FLTK dialog generator)
AC_PATH_PROG(FLUID, fluid, , $PATH:/usr/bin:/bin:/usr/local/bin)
if test "$FLUID" = ""; then
	AC_MSG_ERROR([The dialog editor/generator of FLTK, fluid must be installed. Check your FLTK installation.])
fi

dnl =======Checks for depmod==================================================

dnl Check for depmod
AC_PATH_PROG(DEPMOD,depmod,,$PATH:/usr/bin:/bin:/usr/sbin:/sbin)
if test "$DEPMOD" = ""; then
	AC_MSG_ERROR([Can't find depmod executable])
fi

dnl END CUSTOM RULES

AC_CONFIG_FILES([Makefile
                 aexcl/Makefile
                 aexcl/ipod/Makefile
                 drivers/Makefile
                 raop_play/Makefile
                 rendezvous/Makefile])
AC_OUTPUT
